<resources>
    <string name="create">Create an account</string>
    <string name="terms">By clicking ‘Create Account,’ you agree to Akounto’s</string>
    <string name="conditions"><u>terms of use</u> and <u>privacy policy</u>.</string>
    <string name="create_sub">We just need a couple quick details to sign up lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="promo">Receive exclusive offers and promotions from Akounto</string>
    <string name="sign_in_f"><u>Sign In</u></string>
    <string name="info">Personal info</string>
    <string name="info2">Business info</string>
    <string name="info3">Schedule a demo</string>
    <string name="info4">Connect Bank</string>
    <string name="info_sub5">Schedule demo with us. Our team contact us within 24hrs.</string>
    <string name="info_sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis ipsum bibendum eget dictum felis.</string>
    <string name="info_sub2">Great, lets see what Akounto can do for you! dipisc elit Feugiat amet, accumsan in enim. Fames.</string>
    <string name="skip"><u>Skip for now</u></string>
    <string name="welcome_to">Welcome to <font color = "#5a53fd">Akounto</font></string>
    <string name="info5">Forgot Password?</string>
    <string name="emailid">Email id</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_pass"><u>Forgot password?</u></string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Akounto</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="copy">Copy</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exportcsv">CSV</string>
    <string name="exportpdf">PDF</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="not_set">Not set</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="report_2018">2018</string>
    <string name="report_2019">2019</string>
    <string name="report_2020">2020</string>
    <string name="web_client_id2">601708062210-j04jblai2mpjipgissstheh984qd2i10.apps.googleusercontent.com</string>
    <string name="web_client_secret2">bChH6QTNvtMLWD4GqvhcYEfJ</string>
    <string name="report_Q12018">Q1 2018</string>
    <string name="report_Q12019">Q1 2019</string>
    <string name="report_Q12020">Q1 2020</string>
    <string name="report_Q22018">Q2 2018</string>
    <string name="report_Q22019">Q2 2019</string>
    <string name="report_Q22020">Q2 2020</string>
    <string name="report_Q32018">Q3 2018</string>
    <string name="report_Q32019">Q3 2019</string>
    <string name="report_Q32020">Q3 2020</string>
    <string name="report_Q42018">Q4 2018</string>
    <string name="report_Q42019">Q4 2019</string>
    <string name="report_Q42020">Q4 2020</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="this_is_adraft">This is a Draft Bill. You can take further actions once you approve it.</string>
    <string name="this_is_adraft_estimate">This is a Draft Estimate. You can take further actions once you approve it.</string>
    <string name="this_is_adraft_estimate_approved">This is a APPROVED ESTIMATE .you can convert this to invoice by clicking on convert to invoice button.</string>
    <string name="this_is_adraft_invoice">This is a Draft Invoice. You can take further actions once you approve it.</string>
    <string name="this_is_adraft_invoice_approved">This is a APPROVED INVOICE </string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="ucrop_error_input_data_is_absent">Both input and output Uri must be specified</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_mutate_exception_hint">Therefore, override color resource (ucrop_color_toolbar_widget) in your app to make it work on pre-L devices</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_with_google">Login with Google</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">  Sign up  </string>
    <string name="here">here</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy">By creating an account, you agree to our Terms of Service and Privacy Policy</string>
    <string name="forgot_pass">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="sign_up_it_s_free">Sign Up - Its </string>
    <string name="bank_list">Banking</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_account_name">Bank Account Name</string>
    <string name="last_updated">Last Updated</string>
    <string name="auto_import">Auto Import</string>
    <string name="currency_sign">Currency Sign</string>
    <string name="customer_care">+1-833-256-8686</string>
    <string name="content_exit">
    Uh-oh! It seems something went wrong:\n\"%1$s\"

    \n\nVisit <a href="https://plaid.com/docs/#errors">https://plaid.com/docs/#errors</a> for more information on the error code below
    \nError Code: <b>%2$s</b>
  </string>
    <string name="content_cancel">You left Link without completing the flow. Reason: %1$s</string>
    <string name="invoices">Invoices</string>
</resources>