<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/arc_bg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="Forgot Password"
            android:textColor="@color/text_clor"
            android:textSize="@dimen/_19sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal|bottom"
            android:text="@string/forgot_pass"
            android:textColor="@color/text_clor" />


        <TextView
            android:id="@+id/lab_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/email_address"
            android:textColor="@color/text_blue" />

        <EditText
            android:id="@+id/email_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="Email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
        <!---->

        <TextView
            android:id="@+id/forgotButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayoutEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_button_blue"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="12dp"
            android:paddingRight="30dp"
            android:paddingBottom="12dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>