<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/arc_bg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="Sign in"
                android:textColor="@color/text_clor"
                android:textSize="@dimen/_19sdp" />


            <TextView
                android:id="@+id/lab_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/email_address"
                android:textColor="@color/text_blue" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="14dp" />

            <View
                android:id="@+id/viewEmailET"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/emailET"
                android:background="@color/bg_color"
                android:visibility="gone" />

            <TextView
                android:id="@+id/lab_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Password"
                android:textColor="@color/text_blue" />

            <com.xwray.passwordview.PasswordView
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionDone"
                android:hint="Password"
                android:textSize="14dp" />

            <View
                android:id="@+id/viewPaswordET"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/passwordET"
                android:background="@color/light_grey"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical">

                <TextView
                    android:id="@+id/txt_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text_clor" />
            </LinearLayout>

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner_button_blue"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="12dp"
                android:paddingRight="30dp"
                android:paddingBottom="12dp"
                android:text="Sign In"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Or"
                android:textColor="@color/text_clor" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_11sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/new_user"
                        android:textColor="@color/text_clor" />

                    <TextView
                        android:id="@+id/text_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/sign_up"
                        android:textColor="@color/text_blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/here"
                        android:textColor="@color/text_clor" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_11sdp"
                    android:layout_marginRight="@dimen/_11sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy"
                    android:textColor="@color/text_clor"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>