<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <!--header-->
    <LinearLayout
        android:id="@+id/sign_in_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_black" />

    </LinearLayout>

    <!--body-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Details-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linSignIn"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/create"
                android:textColor="@color/heading_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/create_sub"
                android:textAlignment="center"
                android:textColor="@color/heading_color"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/sign_in_input"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="Your Business Email"
                android:textColor="@color/heading_color"
                android:textColorHint="@color/grey_20"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:fontFamily="@font/poppins_regular"
                android:text="Something went wrong please try again."
                android:textColor="#ff2a2a"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="gone" />
            <RelativeLayout
                android:id="@+id/password_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/sign_in_input"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_toStartOf="@+id/tvShow"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginEnd="10dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/heading_color"
                    android:textColorHint="@color/grey_20"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Show"
                    android:textColor="#5DB075"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </RelativeLayout>
            <TextView
                android:id="@+id/password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="left"
                android:lineSpacingExtra="4sp"
                android:text=" Please enter valid password."
                android:textColor="#ff2a2a"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="gone" />
            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/action_primary_btn"
                android:text="Create account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <!--<TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/forget_pass"
                android:textAlignment="center"
                android:textColor="@color/primary_color"
                android:textSize="12sp" />-->

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:buttonTint="@color/primary_color"
                android:paddingStart="10dp"
                android:text="@string/promo"
                android:textColor="@color/heading_color"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <!--Already Have an account Sign In-->
        <LinearLayout
            android:id="@+id/linSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/text_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Already have an account."
                android:textColor="@color/heading_color"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/sign_in_f"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
